@@ -14,7 +14,6 @@
 
 namespace CastleTests.Registration
 {
-	using Castle.Facilities.TypedFactory;
 	using Castle.MicroKernel.Registration;
 	using Castle.MicroKernel.Tests.ClassComponents;
 	using Castle.Windsor.Tests.Interceptors;
